--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "silber/bouncer": "v1.0.0-rc.5",
+        "spatie/laravel-activitylog": "^3.2",
+        "yajra/laravel-datatables-oracle": "^9.4"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
